# nqueens

./: CMakeLists.txt  a.out  nqeensGPU.cpp  nqueensOpenMP.cpp  nqueensRecursive.cpp
